# relayprobe

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  cli.py  jobs.py  main.py
app/detector/: __init__.py  baselines.py  budget.py  core.py  log_redact.py  probes.py  scoring.py  types.py
app/detector/adapters/: __init__.py  anthropic.py  base.py  google.py  openai.py
app/detector/dimensions/: __init__.py  base.py  identity_consistency.py  injection_safety.py  online.py  token_billing.py  tool_use.py  wrapper_detection.py
app/routes/: baselines.py  detect.py  health.py
data/: baselines.yaml  probes.yaml
data/mock_responses/: anthropic_authentic.json  google_authentic.json  openai_authentic.json
docs/superpowers/plans/: 2026-05-23-ai-relay-detector-v0.1.md
docs/superpowers/specs/: 2026-05-23-ai-relay-detector-design.md
scripts/: render.py  run_batch.py
tests/: test_baselines.py  test_budget.py  test_cli.py  test_core.py  test_jobs.py  test_log_redact.py  test_probes.py  test_routes.py  test_scoring.py
tests/test_adapters/: test_anthropic.py  test_factory.py  test_google.py  test_openai.py
tests/test_dimensions/: test_identity_consistency.py  test_injection_safety.py  test_online.py  test_token_billing.py  test_tool_use.py  test_wrapper_detection.py
